correction des liens d'images

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <header class="header">
         <a href="#">
-            <img src="images/logo/Reservia.svg" alt="reservia">
+            <img src="images//logo/Reservia.svg" alt="reservia">
         </a>
         <nav>
             <ul>
@@ -78,7 +78,7 @@
                 <article>
                     <a href="#">
                         <figure>
-                            <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Chambre avec un lit superposé et une fenêtre donnant vue sur la  ville.">
+                            <img src="images//hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Chambre avec un lit superposé et une fenêtre donnant vue sur la  ville.">
                         </figure>
                         <h3>Auberge la Cannebière</h3>
                         <p>Nuit à partir de <b>25€</b></p>
@@ -94,7 +94,7 @@
                 <article>
                     <a href="#">
                         <figure>
-                            <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Chambre grise avec deux lits simples et une fenêtre.">  
+                            <img src="images//hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Chambre grise avec deux lits simples et une fenêtre.">  
                         </figure>
                         <h3>Hôtel du port</h3>
                         <p>Nuit à partir de <b>52€</b></p>
@@ -110,7 +110,7 @@
                 <article>
                     <a href="#">
                         <figure>
-                            <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Chambre avec lit double, armoire et fenêtre.">
+                            <img src="images//hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Chambre avec lit double, armoire et fenêtre.">
                         </figure>
                         <h3>Hôtel Les mouettes</h3>
                         <p>Nuit à partir de <b>76€</b></p>
@@ -126,7 +126,7 @@
                 <article>
                     <a href="#">
                         <figure>
-                            <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Chambre avec lit double sur les tons de mer.">
+                            <img src="images//hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Chambre avec lit double sur les tons de mer.">
                         </figure>
                         <h3>Hôtel de la mer</h3>
                         <p>Nuit à partir de <b>46€</b></p>
@@ -142,7 +142,7 @@
                 <article>
                     <a href="#">
                         <figure>
-                            <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Chambre avec lits simples superposés.">
+                            <img src="images//hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Chambre avec lits simples superposés.">
                         </figure>
                         <h3>Auberge Le Panier</h3>
                         <p>Nuit à partir de <b>23€</b></p>
@@ -158,7 +158,7 @@
                 <article>
                     <a href="#">
                         <figure>
-                            <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Chambre éclairée avec lit double et grande fenêtre.">
+                            <img src="images//hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Chambre éclairée avec lit double et grande fenêtre.">
                         </figure>
                         <h3>Hôtel chez Amina</h3>
                         <p>Nuit à partir de <b>96€</b></p>
@@ -178,7 +178,7 @@
                 <article>
                     <a href="#">
                         <figure>
-                            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Chambre lumineuse avec lit double.">
+                            <img src="images//hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Chambre lumineuse avec lit double.">
                         </figure>
                         <div class="hostingPopularWrap">
                             <h3>Hôtel Le soleil du matin</h3>
@@ -197,7 +197,7 @@
                 <article>
                     <a href="#">
                         <figure>
-                            <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambre moderne avec lit double.">
+                            <img src="images//hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambre moderne avec lit double.">
                         </figure>
                         <div class="hostingPopularWrap">
                             <h3>Au coeur de l'eau Chambres d'hôtes</h3>
@@ -216,7 +216,7 @@
                   <article>
                     <a href="#">
                         <figure>
-                            <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Chambre moderne avec lit double.">
+                            <img src="images//hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Chambre moderne avec lit double.">
                         </figure>
                         <div class="hostingPopularWrap">
                             <h3>Hôtel Tout bleu et Blanc</h3>
@@ -243,37 +243,37 @@
             <h2>Activités à Marseille</h2>
             <a id="un" href="#">
                 <div class="activityWrapimg">
-                    <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="reno-laithienne">
+                    <img src="images//activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="reno-laithienne">
                 </div>
                 <h3>Vieux Port</h3>
             </a>
             <a id="deux" href="#">
                 <div class="activityWrapimg">
-                    <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="paul-hermann">
+                    <img src="images//activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="paul-hermann">
                 </div>
                 <h3>Fort de Pomègues</h3>
             </a>
             <a id="trois" href="#">
                 <div class="activityWrapimg">
-                    <img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="kilyan-sockalingum">
+                    <img src="images//activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="kilyan-sockalingum">
                 </div>
                 <h3>Parc National des Calanques</h3>
             </a>
             <a id="quatre" href="#">
                 <div class="activityWrapimg">
-                    <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="florian-wehde">
+                    <img src="images//activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="florian-wehde">
                 </div>
                 <h3>Notre-Dame-de-la-Garde</h3>
             </a>
             <a id="cinq" href="#">
                 <div class="activityWrapimg">
-                    <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="kevin-hikari">
+                    <img src="images//activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="kevin-hikari">
                 </div>
                 <h3>Île du Frioul</h3>
             </a>
             <a id="six" href="#">
                 <div class="activityWrapimg">
-                    <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="lena-paulin">
+                    <img src="images//activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="lena-paulin">
                 </div>
                 <h3>Parc Longchamp</h3>
             </a>
